# network-mcp

./: .gitignore  README.md  pyproject.toml
docs/: architecture.excalidraw
src/network_mcp/: config.py  server.py
src/network_mcp/models/: responses.py
src/network_mcp/tools/: __init__.py  connectivity.py  pcap.py
tests/: test_config.py  test_local.py  test_pcap.py  test_server.py
